--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Serena J. Gu</title>
+		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -15,16 +15,16 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Serena J. Gu!</h1>
-				<p>xtest <em> testsssss </em> xxtesttssss <a href="/about">tests...</a></p>
-    		</div><!-- /.blurb -->
+
+		{{ content }}
+
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:serenajgu@gmail.com">email</a></li>
+	    	<ul>
+	        	<li><a href="mailto:serenajgu@gmail.com">email</a></li>
         		<li><a href="https://github.com/cytfloar">github.com/cytfloar</a></li>
 			</ul>
 		</footer>
 	</body>
-</html>
+</html>	
+
