update google schoar icon

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,5 +3,9 @@ ul.social-icons li {
 }
 
 .ai.ai-cv.big-icon {
-    font-size: 25px;
+    font-size: 24px;
 }
+
+.ai-google-scholar {
+    font-size: 25px;
+  }
